# toql

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
book/: Cargo.toml  book.toml
book/src/: 1-introduction.md  2-concept.md  SUMMARY.md  main.rs  overview.md  query-language.md  toql-derive.md
book/src/3-api/: 1-introduction.md  3-query-type.md  4-insert.md  5-update.md
book/src/4-derive/: 1-introduction.md  10-keys.md  11-insert.md  12-update.md  14-predicates.md  15-predicate-handlers.md  16-roles.md  17-reference.md  2-fields.md  3-optional-fields.md  4-sql-expressions.md  5-field-handlers.md  6-joins.md  7-join-handlers.md  8-partial-tables.md  9-merges.md
book/src/5-query-language/: 2-select.md  4-filter.md  5-selections.md
book/src/6-appendix/: 1-introduction.md  2-mysql-enums.md  3-row-access-control.md  4-row-access-control.md  4-serde.md  5-debugging-toql.md  5-debugging.md  6-debugging.md
crates/core/: Cargo.toml
crates/core/src/: alias.rs  alias_format.rs  alias_translator.rs  backend.rs  cache.rs  cache_builder.rs  dep2_sql_builder.rs  dep_insert_path.rs  dep_path_predicate.rs  dep_role_expr_parser.rs  dep_sql_builder.rs  dep_sql_builder_result.rs  dialect.rs  error.rs  field_handler.rs  fields.rs  from_iterator.rs  from_row.rs  identity.rs  insert_path.rs  join.rs  join_handler.rs  join_macro.rs  key.rs  key_fields.rs  key_query.rs  keyed.rs  lib.rs  load.rs  log_helper.rs  log_macro.rs  map_key.rs  map_query.rs  merge.rs  mutate.rs  none_error_macro.rs  page.rs  page_counts.rs  parameter.rs  parameter_map.rs  (+28 more)
crates/core/src/backend/: api.rs  context.rs  context_builder.rs  count.rs  delete.rs  dep_fields.rs  dep_paths.rs  fields.rs  insert.rs  load.rs  map.rs  mod.rs  paths.rs  update.rs
crates/core/src/deserialize/: conn.rs  dep_row.rs  error.rs  mod.rs  row.rs  select.rs
crates/core/src/join/: from_row.rs  keyed.rs  tree_identity.rs  tree_index.rs  tree_insert.rs  tree_merge.rs  tree_predicate.rs  tree_update.rs
crates/core/src/key_fields/: into_query.rs  join.rs  to_query.rs
crates/core/src/mock_db/: backend.rs  mod.rs  row.rs  toql_api.rs
crates/core/src/query/: concatenation.rs  dep_filter_arg.rs  dep_predicate_arg.rs  field.rs  field_filter.rs  field_order.rs  field_path.rs  filter_arg.rs  from_key_fields.rs  predicate.rs  predicate_arg.rs  query_predicate.rs  query_token.rs  query_with.rs  selection.rs  wildcard.rs
crates/core/src/sql_arg/: error.rs  from.rs  from_row.rs  try_into.rs
crates/core/src/sql_builder/: build_context.rs  build_result.rs  construct.rs  dep_sql_with_placeholders.rs  eval_query.rs  mod.rs  path_tree.rs  select_stream.rs  selection.rs  selector.rs  sql_builder_error.rs  sql_builder_result.rs  sql_target_data.rs  wildcard_scope.rs
crates/core/src/sql_expr/: resolver.rs  resolver_error.rs
crates/core/src/sql_mapper/: error.rs  field.rs  field_options.rs  join.rs  join_options.rs  join_type.rs  mapped.rs  merge.rs  predicate.rs  predicate_options.rs
crates/core/src/table_mapper/: error.rs  field.rs  (+11 more)
crates/core/tests/: count_test.rs  custom_handler_test.rs  delete_test.rs  file_path.rs  filter_test.rs  logic_test.rs  path_test.rs  predicate_test.rs  select_test.rs
crates/core/tests_dep/: count_test.rs  delete_test.rs  filter_test.rs  order_test.rs  predicate_test.rs
crates/derive/: Cargo.toml
crates/derive/src/: annot.rs  codegen_entity_from_row.rs  codegen_from_row_key.rs  codegen_key_from_row.rs  codegen_mysql_insert.rs  codegen_mysql_key.rs  codegen_mysql_load.rs  codegen_mysql_select.rs  codegen_toql_delup.rs  codegen_toql_key.rs  codegen_toql_mapper.rs  codegen_toql_query_fields.rs  codegen_toql_tree.rs  lib.rs  sane.rs  string_set.rs  util.rs
crates/derive/tests/: diff_test.rs  rename_test.rs  update_test.rs
crates/field_list_parser/: Cargo.toml
crates/field_list_parser/src/: field_list.pest  lib.rs
crates/mysql/: Cargo.toml
crates/mysql/src/: access.rs  error.rs  insert.rs  lib.rs  row.rs  sql_arg.rs  update.rs
crates/paths_macro/: Cargo.toml
crates/paths_macro/src/: lib.rs  paths_macro.rs
crates/query_macro/: Cargo.toml
crates/query_macro/src/: lib.rs  query_macro.rs
crates/role_expr_macro/: Cargo.toml
crates/role_expr_macro/src/: lib.rs  role_expr_macro.rs
crates/sql_expr_macro/: Cargo.toml
crates/sql_expr_macro/src/: lib.rs  sql_expr_macro.rs
crates/sql_expr_parser/: Cargo.toml
crates/sql_expr_parser/src/: lib.rs  sql_expr.pest  toql.pest
crates/toql_derive/: Cargo.toml
crates/toql_derive/src/: error.rs  lib.rs  result.rs
crates/toql_enum_derive/: Cargo.toml
crates/toql_enum_derive/src/: lib.rs
toql_core/: Cargo.toml
toql_core/src/: alias.rs  conn.rs  dialect.rs  diff.rs  error.rs  field_handler.rs  fields_type.rs  indelup.rs  join_handler.rs  key.rs  lib.rs  load.rs  log_helper.rs  main.rs  merge.rs  mutate.rs  predicate_handler.rs  query.rs  query_builder.rs  query_parser.rs  rocket.rs  select.rs  sql.rs  sql_builder.rs  sql_builder_result.rs  sql_mapper.rs  sql_mapper_registry.rs  sql_predicate.rs  sql_stmt.rs  toql.pest  toql.rs
toql_core/tests/: count_test.rs  custom_handler_test.rs  filter_test.rs  logic_test.rs  order_test.rs  path_test.rs  query_builder_test.rs  select_test.rs
toql_derive/: Cargo.toml
toql_derive/src/: annot.rs  codegen.rs  codegen_mysql.rs  codegen_mysql_alter.rs  codegen_mysql_insert.rs  codegen_mysql_key.rs  codegen_mysql_load.rs  codegen_mysql_query.rs  codegen_mysql_select.rs  codegen_toql_delup.rs  codegen_toql_indelup.rs  codegen_toql_key.rs  codegen_toql_mapper.rs  codegen_toql_mutate.rs  codegen_toql_query_builder.rs  codegen_toql_query_fields.rs  lib.rs  sane.rs  util.rs
toql_derive/tests/: delete_test.rs  diff_test.rs  insert_test.rs  join_test.rs  rename_test.rs  select_test.rs  simple_test.rs  update_test.rs
toql_mysql/: Cargo.toml
toql_mysql/src/: alter.rs  diff.rs  error.rs  insert.rs  lib.rs  load.rs  row.rs  select.rs  sql_arg.rs
toql_parser/: Cargo.toml
toql_parser/src/: lib.rs  toql.pest
toql_rocket/: Cargo.toml
toql_rocket/src/: counted.rs  error.rs  lib.rs  mysql.rs  toql_query.rs
(+344 files in other folders)
