[package]
name = "toql"
version = "0.1.10"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "The toql query language"
keywords = ["toql", "sql", "database"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
toql_core = { path = "crates/core", version = "0.1" }
toql_mysql = { path = "crates/mysql", version = "0.1", optional = true }
toql_derive = { path = "crates/derive", version = "0.1" }
toql_query_builder = { path = "crates/query_builder", version = "0.1" }
toql_query_parser = { path = "crates/query_parser", version = "0.1" }

log = "0.4"

[workspace]
members =  [
    "crates/core",
    "crates/mysql",
    "crates/derive",
    "crates/query_builder",
    "crates/query_parser"
]

[features]
mysql = ["toql_mysql", "toql_derive/mysqldb"]


