[package]
name = "toql"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "The toql query language"
keywords = ["toql", "sql", "database"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
toql_core = { path = "crates/core", version = "0.3" }
toql_derive = { path = "crates/derive", version = "0.3" }
toql_query_macro = { path = "crates/query_macro", version = "0.3" }
toql_query_parser = { path = "crates/query_parser", version = "0.3" }
toql_sql_expr_parser = { path = "crates/sql_expr_parser", version = "0.3" }
toql_field_list_parser = { path = "crates/field_list_parser", version = "0.3" }
toql_fields_macro = { path = "crates/fields_macro", version = "0.3" }
toql_paths_macro = { path = "crates/paths_macro", version = "0.3" }
toql_role_expr_macro = { path = "crates/role_expr_macro", version = "0.3" }
toql_role_expr_parser = { path = "crates/role_expr_parser", version = "0.3" }

log = "0.4"

[workspace]
members =  [
    "crates/core",
    "crates/derive",
    "crates/query_macro",
    "crates/query_parser",
    "crates/sql_expr_parser",
    "crates/field_list_parser",
    "crates/fields_macro",
    "crates/paths_macro",
    "crates/role_expr_macro",
    "crates/role_expr_parser"
]

[features]
serde = ["toql_derive/serde"]


