[package]
name = "toql"
version = "0.4.2"
authors = ["Roy Ganz <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Toql - A friendly and productive ORM"
keywords = ["toql", "sql", "database", "orm"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
toql_core = { path = "crates/core", version = "0.4" }
toql_derive = { path = "crates/toql_derive", version = "0.4" }
toql_enum_derive = { path = "crates/toql_enum_derive", version = "0.4" }
toql_query_macro = { path = "crates/query_macro", version = "0.4" }
toql_query_parser = { path = "crates/query_parser", version = "0.4" }
toql_sql_expr_parser = { path = "crates/sql_expr_parser", version = "0.4" }
toql_sql_expr_macro = { path = "crates/sql_expr_macro", version = "0.4" }
toql_field_list_parser = { path = "crates/field_list_parser", version = "0.4" }
toql_fields_macro = { path = "crates/fields_macro", version = "0.4" }
toql_paths_macro = { path = "crates/paths_macro", version = "0.4" }
toql_role_expr_macro = { path = "crates/role_expr_macro", version = "0.4" }
toql_role_expr_parser = { path = "crates/role_expr_parser", version = "0.4" }

log = "0.4"

[dev-dependencies]
async-trait ="0.1"
tokio ={ version = "1", features = ["full"] }
tracing= "0.1"
tracing-test= {version = "0.1", git="https://github.com/reem/tracing-test", branch="add-configurable-env-filter"}
pretty_assertions ="1"

[workspace]
members =  [
    "crates/core",
    "crates/toql_derive",
    "crates/toql_enum_derive",
    "crates/query_macro",
    "crates/query_parser",
    "crates/sql_expr_parser",
    "crates/sql_expr_macro",
    "crates/field_list_parser",
    "crates/fields_macro",
    "crates/paths_macro",
    "crates/role_expr_macro",
    "crates/role_expr_parser"
]

[features]
serde = ["toql_derive/serde", "toql_core/serde_feature"]



