[package]
name = "guide"
version = "0.1.0"
authors = ["roy-ganz <roy.ganz@glanis.biz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toql = {git="https://github.com/roy-ganz/toql.git", branch="v0.3"}
toql_mock_db = {git="https://github.com/roy-ganz/toql_mock_db.git" }


[patch.'https://github.com/roy-ganz/toql.git']
toql = {path= "../../toql" }

[patch.'https://github.com/roy-ganz/toql_mock_db.git']
toql_mock_db = {path= "../../toql_mock_db" }
