[package]
name = "toql_core"
version = "0.1.4"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with core functionality for toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
enquote = "1"

