[package]
name = "toql_core"
version = "0.1.5"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with core functionality for toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
pest = "2.0"
pest_derive = "2.0"
mysql = {version = ">=15", optional = true} # Needed for error integration
log= "0.4"

enquote="1"

[features]
mysqldb = ["mysql"]

