[package]
name = "toql_mysql"
version = "0.1.3"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with mysql integration for toql"
keywords = ["toql"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
toql_core = { version="0.1", path="../toql_core", features=["mysqldb"]}
mysql = ">=15"
log= "0.4"



