[package]
name = "toql_parser"
version = "0.1.3"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with parser for toql expressions"
keywords = ["toql"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
log= "0.4"
pest = "2.0"
pest_derive = "2.0"


