[package]
name = "toql_rocket"
version = "0.1.1"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with rocket integration for toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
toql_core = { version = "0.1", path = "../toql_core", features = ["rocketweb"] }
toql_mysql = { version = "0.1", path = "../toql_mysql" }
rocket = "0.4"
log = "0.4"
mysql = { version = "^14",  optional = true }

[features]
mysqldb = ["mysql"]