[package]
name = "toql_core"
version = "0.1.5"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with core functionality for Toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
pest = "2.0"

log= "0.4"
regex="1.3"
lazy_static = "1.4"
enquote="1"
chrono = "^0.4"
heck ="0.3"

toql_query_parser = { version = "0.1", path = "../query_parser" }
toql_sql_expr_parser = { version = "0.1", path = "../sql_expr_parser" }


