[package]
name = "toql_core"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with core functionality for Toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
pest = "2.0"

log= "0.4"
regex="1"
lazy_static = "1.4"
enquote="1"
chrono = "^0.4"
heck ="0.3"
lru = "0.6"
serde  = {package="serde", version = "1", optional= true}
async-trait ="0.1"

toql_query_parser = { version = "0.3", path = "../query_parser" }
toql_sql_expr_parser = { version = "0.3", path = "../sql_expr_parser" }
toql_role_expr_parser = { version = "0.3", path = "../role_expr_parser" }


[features]
serde_feature = ["serde"]

