[package]
name = "toql_derive"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with derive for toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[lib]
proc-macro = true

[dependencies]

syn = "0.15"
darling ="0.9"

quote = "0.6"
heck = "0.3"

proc-macro2 = "0.4"
mysql = {version=">=14", optional=true}
log = "0.4"
env_logger="0.6"
regex="1"

[features]
mysql14 = ["mysql"]

[dev-dependencies]
toql = {version = "0.3", path="../../../toql", features=["mysql14"]}
