[package]
name = "toql_field_list_parser"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with parser for a list of toql fields"
keywords = ["toql"]
readme = "README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
log= "0.4"
pest = "2.0"
pest_derive = "2.0"


