[package]
name = "toql_query_macro"
version = "0.1.5"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with query macro for toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[lib]
proc-macro = true

[dependencies]

syn = "0.15"
darling ="0.9"

quote = "0.6"
heck = "0.3"

proc-macro2 = "0.4"

log = "0.4"
env_logger="0.6"

pest= "2.0"

toql_query_parser = { version = "0.1", path = "../query_parser" }


