[package]
name = "toql_sql_expr_macro"
version = "0.3.0"
authors = ["Artos <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with sql expr macro for toql"
keywords = ["toql"]
readme = "../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[lib]
proc-macro = true

[dependencies]

syn = "0.15"
darling ="0.9"

quote = "0.6"
heck = "0.3"

proc-macro2 = "0.4"

tracing = "0.1"
env_logger="0.6"

pest= "2.0"

toql_sql_expr_parser = { version = "0.3", path = "../sql_expr_parser" }


