[package]
name = "toql_sql_expr_parser"
version = "0.3.0"
authors = ["Roy Ganz <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with SQL expression parser for Toql"
keywords = ["toql"]
readme = "../../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[dependencies]
log= "0.4"
pest = "2.0"
pest_derive = "2.0"


