[package]
name = "toql_derive"
version = "0.3.0"
authors = ["Roy Ganz <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with derive for toql"
keywords = ["toql"]
readme = "../../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[lib]
proc-macro = true

[dependencies]
syn = {version= "1", features=["derive", "parsing", "extra-traits"]}
quote = "1"
heck = "0.3"
proc-macro2 = "1"
log = "0.4"
env_logger="0.6"
regex="1"
levenshtein = "1"

[features]
serde = []