[package]
name = "toql_enum_derive"
version = "0.4.0"
authors = ["Roy Ganz <roy.ganz@glanis.biz>"]
edition = "2018"
description = "Library with enum derive for toql"
keywords = ["toql", "enum"]
readme = "../../README.md"
license = "MIT/Apache-2.0"
repository = "https://github.com/roy-ganz/toql"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
darling ="0.9"
quote = "0.6"
heck = "0.3"
proc-macro2 = "0.4"
log = "0.4"
env_logger="0.6"
regex="1"
levenshtein = "1"

[features]
serde = []
